{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 1378,
  "lineage": "4019f366-426f-45a0-e601-de767000f46d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lab-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c2b17681ee0d7b7a",
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:elastic-ip/eipalloc-0c2b17681ee0d7b7a",
            "association_id": "eipassoc-0a5b01cf735ca9d1d",
            "domain": "vpc",
            "id": "eipalloc-0c2b17681ee0d7b7a",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0cbd7d0ca12fc3e3a",
            "private_dns": "ip-10-0-1-27.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.27",
            "public_dns": "ec2-43-200-220-203.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.220.203",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lab-bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07e2c7299e2ebb2d6",
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:instance/i-096df0a45b74257ee",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096df0a45b74257ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hk_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b871a158adc3fc44",
            "private_dns": "ip-10-0-1-228.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.228",
            "public_dns": "ec2-3-36-58-146.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.58.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0923d9c95a680528f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7d79017e80a12f2",
            "tags": {
              "Name": "lab-bastion-host"
            },
            "tags_all": {
              "Name": "lab-bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e1bb04492118573"
            ]
          },
          "dependencies": [
            "aws_key_pair.hk_keypair",
            "aws_security_group.lab-bastion-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.lab-vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.hk_keypair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:internet-gateway/igw-09d075df24302fd9e",
            "id": "igw-09d075df24302fd9e",
            "owner_id": "533267073442",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lab-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:533267073442:loadbalancer/app/lab-alb/b46d6b040377a22c",
            "arn_suffix": "app/lab-alb/b46d6b040377a22c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lab-alb-1816033724.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:533267073442:loadbalancer/app/lab-alb/b46d6b040377a22c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lab-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bc7c53549518d20d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-051a1513f2ef60856"
              },
              {
                "subnet_id": "subnet-0f7d79017e80a12f2"
              }
            ],
            "subnets": [
              "subnet-051a1513f2ef60856",
              "subnet-0f7d79017e80a12f2"
            ],
            "tags": {
              "Name": "lab-alb"
            },
            "tags_all": {
              "Name": "lab-alb"
            },
            "vpc_id": "vpc-024636c3bad3e2cc2",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.lab-alb-sg",
            "aws_subnet.public-subnet",
            "aws_subnet.public-subnet-b",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lab-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:533267073442:listener/app/lab-alb/b46d6b040377a22c/03dda99a638eb1a5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:533267073442:targetgroup/lab-tg/86a636a94c21d640",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:533267073442:listener/app/lab-alb/b46d6b040377a22c/03dda99a638eb1a5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:533267073442:loadbalancer/app/lab-alb/b46d6b040377a22c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "lab-listener"
            },
            "tags_all": {
              "Name": "lab-listener"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lab-alb",
            "aws_lb_target_group.lab-tg",
            "aws_security_group.lab-alb-sg",
            "aws_subnet.public-subnet",
            "aws_subnet.public-subnet-b",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lab-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:533267073442:targetgroup/lab-tg/86a636a94c21d640",
            "arn_suffix": "targetgroup/lab-tg/86a636a94c21d640",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:533267073442:targetgroup/lab-tg/86a636a94c21d640",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:533267073442:loadbalancer/app/lab-alb/b46d6b040377a22c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lab-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab-tg"
            },
            "tags_all": {
              "Name": "lab-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "lab-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c2b17681ee0d7b7a",
            "association_id": "eipassoc-0a5b01cf735ca9d1d",
            "connectivity_type": "public",
            "id": "nat-0814bb6e5b73c5fa8",
            "network_interface_id": "eni-0cbd7d0ca12fc3e3a",
            "private_ip": "10.0.1.27",
            "public_ip": "43.200.220.203",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f7d79017e80a12f2",
            "tags": {
              "Name": "lab-nat-gw"
            },
            "tags_all": {
              "Name": "lab-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.lab-eip",
            "aws_subnet.public-subnet",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "lab-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ed14d0ed8ec716631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0814bb6e5b73c5fa8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ed14d0ed8ec71663",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lab-eip",
            "aws_nat_gateway.lab-nat-gw",
            "aws_route_table.lab-app-rt-a",
            "aws_subnet.public-subnet",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "lab-nat-gw-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03d4075b375595dda1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0814bb6e5b73c5fa8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03d4075b375595dda",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lab-eip",
            "aws_nat_gateway.lab-nat-gw",
            "aws_route_table.lab-app-rt-b",
            "aws_subnet.public-subnet",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab-app-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:route-table/rtb-0ed14d0ed8ec71663",
            "id": "rtb-0ed14d0ed8ec71663",
            "owner_id": "533267073442",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0814bb6e5b73c5fa8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab-app-rt-a"
            },
            "tags_all": {
              "Name": "lab-app-rt-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab-app-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:route-table/rtb-03d4075b375595dda",
            "id": "rtb-03d4075b375595dda",
            "owner_id": "533267073442",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0814bb6e5b73c5fa8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab-app-rt-b"
            },
            "tags_all": {
              "Name": "lab-app-rt-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab-db-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:route-table/rtb-074ed3713607ca082",
            "id": "rtb-074ed3713607ca082",
            "owner_id": "533267073442",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lab-db-rt"
            },
            "tags_all": {
              "Name": "lab-db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab-db-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:route-table/rtb-09c4afcf5d903580a",
            "id": "rtb-09c4afcf5d903580a",
            "owner_id": "533267073442",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lab-db-rt"
            },
            "tags_all": {
              "Name": "lab-db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:route-table/rtb-0fecc474c67d656c8",
            "id": "rtb-0fecc474c67d656c8",
            "owner_id": "533267073442",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d075df24302fd9e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:route-table/rtb-030032212a6f6001e",
            "id": "rtb-030032212a6f6001e",
            "owner_id": "533267073442",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d075df24302fd9e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-b"
            },
            "tags_all": {
              "Name": "public-rt-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab-db-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a06067fdbe9d8581",
            "route_table_id": "rtb-074ed3713607ca082",
            "subnet_id": "subnet-0726b17a4ce71a1a2"
          },
          "dependencies": [
            "aws_route_table.lab-db-rt-a",
            "aws_subnet.db-subnet-a",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab-db-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e12d1971135b5718",
            "route_table_id": "rtb-09c4afcf5d903580a",
            "subnet_id": "subnet-02c98599ea22d8fde"
          },
          "dependencies": [
            "aws_route_table.lab-db-rt-b",
            "aws_subnet.db-subnet-b",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edd8fee460c7d3e1",
            "route_table_id": "rtb-0ed14d0ed8ec71663",
            "subnet_id": "subnet-0a63326bc41493367"
          },
          "dependencies": [
            "aws_route_table.lab-app-rt-a",
            "aws_subnet.app-subnet-a",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-app-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035bed3b54e61794f",
            "route_table_id": "rtb-03d4075b375595dda",
            "subnet_id": "subnet-0f3e02605c7087e96"
          },
          "dependencies": [
            "aws_route_table.lab-app-rt-b",
            "aws_subnet.app-subnet-b",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-web-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f5be03e3c2ac6df",
            "route_table_id": "rtb-0fecc474c67d656c8",
            "subnet_id": "subnet-0f7d79017e80a12f2"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-web-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba36cb979068fbad",
            "route_table_id": "rtb-0fecc474c67d656c8",
            "subnet_id": "subnet-051a1513f2ef60856"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet-b",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:security-group/sg-0bc7c53549518d20d",
            "description": "allow all traffic to 80 port",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc7c53549518d20d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lab-alb-sg",
            "name_prefix": "",
            "owner_id": "533267073442",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab-sg-alb"
            },
            "tags_all": {
              "Name": "lab-sg-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab-appserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:security-group/sg-08e0a5336d6881162",
            "description": "Allow RDS(8000port), SSH(22port) and HTTP(80port)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e0a5336d6881162",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lab-appserver-sg",
            "name_prefix": "",
            "owner_id": "533267073442",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab-bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:security-group/sg-05e1bb04492118573",
            "description": "Allow SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e1bb04492118573",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lab-bastion_sg",
            "name_prefix": "",
            "owner_id": "533267073442",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:security-group/sg-0ba68b6b1f1e8d5c8",
            "description": "allow access to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba68b6b1f1e8d5c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab-rds-sg",
            "name_prefix": "",
            "owner_id": "533267073442",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:subnet/subnet-0a63326bc41493367",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a63326bc41493367",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267073442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-subnet-a"
            },
            "tags_all": {
              "Name": "app-subnet-a"
            },
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:subnet/subnet-0f3e02605c7087e96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3e02605c7087e96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267073442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-subnet-b"
            },
            "tags_all": {
              "Name": "app-subnet-b"
            },
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:subnet/subnet-0726b17a4ce71a1a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0726b17a4ce71a1a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267073442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet-a"
            },
            "tags_all": {
              "Name": "db-subnet-a"
            },
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:subnet/subnet-02c98599ea22d8fde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c98599ea22d8fde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267073442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet-b"
            },
            "tags_all": {
              "Name": "db-subnet-b"
            },
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:subnet/subnet-0f7d79017e80a12f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7d79017e80a12f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267073442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab-public-subnet"
            },
            "tags_all": {
              "Name": "lab-public-subnet"
            },
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:subnet/subnet-051a1513f2ef60856",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051a1513f2ef60856",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267073442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab-public-subnet-b"
            },
            "tags_all": {
              "Name": "lab-public-subnet-b"
            },
            "vpc_id": "vpc-024636c3bad3e2cc2"
          },
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:533267073442:vpc/vpc-024636c3bad3e2cc2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03742d1830813a0f6",
            "default_route_table_id": "rtb-05f627fc94f54efad",
            "default_security_group_id": "sg-02d31746b3f6a67a3",
            "dhcp_options_id": "dopt-04657b6c36c791a62",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-024636c3bad3e2cc2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05f627fc94f54efad",
            "owner_id": "533267073442",
            "tags": {
              "Name": "lab-hk-vpc"
            },
            "tags_all": {
              "Name": "lab-hk-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}